# RedCodeGen

./: .gitignore  README.md  pyproject.toml  results.jsonl  scratchpad.py
redcodegen/: constants.py  generator.py  main.py  proposal.py  scenarios.py  seeds.py  uncertainty.py  validator.py
redcodegen/kernels/: __init__.py  kernel.py  rephrase.py
scripts/: analyze_baseline_results.py  analyze_proposal_results.py  combine_mcmc_results.py
