[project]
name = "redcodegen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "cwe2>=3.0.0",
    "dspy>=3.0.3",
    "jsonlines>=4.0.0",
    "python-dotenv>=1.1.1",
    "rich>=14.2.0",
    "rich-click>=1.9.3",
    "semgrep>=1.86.0",
]

[project.scripts]
redcodegen = "redcodegen.main:main"

[tool.uv]
package = true
