[project]
name = "redcodegen"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "cwe2>=3.0.0",
    "dspy>=3.0.3",
    "jsonlines>=4.0.0",
    "pandas>=2.3.3",
    "peft>=0.18.0",
    "python-dotenv>=1.1.1",
    "rich>=14.2.0",
    "rich-click>=1.9.3",
    "scipy>=1.16.3",
    "semgrep>=1.86.0",
    "tokenizers>=0.22.1",
    "torch>=2.9.1",
    "transformers>=4.57.1",
]

[project.scripts]
redcodegen = "redcodegen.main:main"

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "seaborn>=0.13.2",
]

[tool.uv.build-backend]
module-name = "redcodegen"
module-root = ""
source-include = ["./redcodegen/data/*"]

